fixed mobile scaling

--- a/about.html
+++ b/about.html
@@ -5,6 +5,9 @@
 		ACM-W | About
 	</title>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<link rel="stylesheet" type="text/css" href="css/base.css">
 	<link rel="stylesheet" type="text/css" href="css/custom.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:100,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
@@ -35,13 +38,13 @@
 </head>
 <body>
 <header>
-	<div class="nav">
+	<nav>
 		<ul>
-			<li class="home"><a href="index.html"><i class="fa fa-home"></i> Home</a></li>
-			<li class="join"><a href="join.html">Join</a></li>
-			<li class="events"><a href="events.html">Events</a></li>
-			<li class="about"><a class="active" href="about.html">About</a></li>
-			<li class="contact"><a href="contact.html">Contact</a></li>
+			<li><a href="/"><i class="fa fa-home"></i> Home</a></li>
+			<li><a href="/join">Join</a></li>
+			<li><a href="/events">Events</a></li>
+			<li><a class="active">About</a></li>
+			<li><a href="/contact">Contact</a></li>
 		</ul>
 	</div>
 </header>
