--- a/join.html
+++ b/join.html
@@ -5,6 +5,9 @@
 		ACM-W | Join
 	</title>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<link rel="stylesheet" type="text/css" href="css/base.css">
 	<link rel="stylesheet" type="text/css" href="css/custom.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:100,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
@@ -35,13 +38,13 @@
 </head>
 <body>
 <header>
-	<div class="nav">
+	<nav>
 		<ul>
-			<li class="home"><a href="index.html"><i class="fa fa-home"></i> Home</a></li>
-			<li class="join"><a class="active" href="join.html">Join</a></li>
-			<li class="events"><a href="events.html">Events</a></li>
-			<li class="about"><a href="about.html">About</a></li>
-			<li class="contact"><a href="contact.html">Contact</a></li>
+			<li><a href="/"><i class="fa fa-home"></i> Home</a></li>
+			<li><a class="active">Join</a></li>
+			<li><a href="/events">Events</a></li>
+			<li><a href="/about">About</a></li>
+			<li><a href="/contact">Contact</a></li>
 		</ul>
 	</div>
 </header>
@@ -49,6 +52,7 @@
 <div class="content">
 		&emsp;There are many great reasons to join the Ohio State chapter of the ACM-W, and we'd be thrilled to have you in our organization.
 		</br>
+		<br/>
 		Here are just a few of the reasons to join us:
 		</br>
 		<ul class="list">
@@ -63,8 +67,9 @@
 		If any of those sound appealing to you, we invite you to join us!
 		</br>
 		</br>
-		The ACM-W is open to all students who are interested in technology, regardless of gender, major, or university status.</br>
-		To find information about our next meeting, please see the Events Page. Also, to receive the most up-to-date information in your inbox, be sure to join our Mailing List.
+		&emsp;The ACM-W is open to all students who are interested in technology, regardless of gender, major, or university status.</br>
+		<br/>
+		&emsp;To find information about our next meeting, please see the Events Page. Also, to receive the most up-to-date information in your inbox, be sure to join our Mailing List.
 </div>
 
 <footer>
