--- a/events.html
+++ b/events.html
@@ -5,6 +5,9 @@
 		ACM-W | Events
 	</title>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<link rel="stylesheet" type="text/css" href="css/base.css">
 	<link rel="stylesheet" type="text/css" href="css/custom.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:100,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
@@ -35,16 +38,16 @@
 </head>
 <body>
 	<header>
-		<div class="nav">
-			<ul>
-			    <li class="home"><a href="index.html"><i class="fa fa-home"></i> Home</a></li>
-				<li class="join"><a href="join.html">Join</a></li>
-				<li class="events"><a class="active" href="events.html">Events</a></li>
-				<li class="about"><a href="about.html">About</a></li>
-				<li class="contact"><a href="contact.html">Contact</a></li>
-			</ul>
-		</div>
-	</header>
+	<nav>
+		<ul>
+			<li><a href="/"><i class="fa fa-home"></i> Home</a></li>
+			<li><a href="/join">Join</a></li>
+			<li><a class="active">Events</a></li>
+			<li><a href="/about">About</a></li>
+			<li><a href="/contact">Contact</a></li>
+		</ul>
+	</div>
+</header>
 
 	<div class="events_container">
 
