--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 	<title>ACM-W | Women In Computing</title>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<link rel="stylesheet" type="text/css" href="css/base.css">
 	<link rel="stylesheet" type="text/css" href="css/custom.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:100,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
@@ -34,13 +37,13 @@
 
 <body>
 <header>
-	<div class="nav">
+	<nav>
 		<ul>
-			<li class="home"><a class="active" href="index.html"><i class="fa fa-home"></i> Home</a></li>
-			<li class="join"><a href="join.html">Join</a></li>
-			<li class="events"><a href="events.html">Events</a></li>
-			<li class="about"><a href="about.html">About</a></li>
-			<li class="contact"><a href="contact.html">Contact</a></li>
+			<li><a class="active"><i class="fa fa-home"></i> Home</a></li>
+			<li><a href="/join">Join</a></li>
+			<li><a href="/events">Events</a></li>
+			<li><a href="/about">About</a></li>
+			<li><a href="/contact">Contact</a></li>
 		</ul>
 	</div>
 </header>
