--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<meta name="msapplication-TileImage" content="img/favicons/favicon-144.png">
 	<meta name="msapplication-config" content="img/favicons/browserconfig.xml">
 	<!-- ****** faviconit.com favicons ****** -->
-	
+
 </head>
 
 <body>
@@ -58,6 +58,12 @@
 		<div class="section_two">
 		<h3 class="header">Meetings</h3>
 		<p class="tagline">Wednesdays at 7pm</br>Dreese Labs 264</br>The Ohio State University</p>
+		<h3 class="header">What we've been up to</h3>
+		<p class="tagline">
+		<a href="img/YearinReview.pdf"><strong>&#8250;</strong> 2015-2016 Year in Review</a>
+		<br />
+		<a href="img/GHCTripReport.pdf"><strong>&#8250;</strong> 2016 Grace Hopper Trip Report</a>
+	</p>
 		</div>
 	</div>
 <footer>
@@ -66,10 +72,10 @@
 			<i class="fa fa-facebook-square"></i>
 		</a>
 		<a href="http://mailman.cse.ohio-state.edu/mailman/listinfo/acmw" target="_blank">
-			<i class="fa fa-envelope-square"></i>			
+			<i class="fa fa-envelope-square"></i>
 		</a>
 		<a href="https://www.instagram.com/acmwosu/" target="_blank">
-			<i class="fa fa-instagram"></i>			
+			<i class="fa fa-instagram"></i>
 		</a>
 	</div>
 	<p class="signature">Designed and Built for the ACM-W at The Ohio State University by Josh Kuehn</p>
