Made navigation drop down menu on mobile

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="css/custom.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:100,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
-	
+
 	<!-- ****** faviconit.com favicons ****** -->
 	<link rel="shortcut icon" href="img/favicons/favicon.ico">
 	<link rel="icon" sizes="16x16 32x32 64x64" href="img/favicons/favicon.ico">
@@ -34,10 +34,11 @@
 	<meta name="msapplication-TileImage" content="img/favicons/favicon-144.png">
 	<meta name="msapplication-config" content="img/favicons/browserconfig.xml">
 	<!-- ****** faviconit.com favicons ****** -->
-	
+
 </head>
 <body>
 <header>
+	<h1 id="nav-title">About <i class="fa fa-angle-down" aria-hidden="true"></i></h1>
 	<nav>
 		<ul>
 			<li><a href="/"><i class="fa fa-home"></i> Home</a></li>
@@ -51,7 +52,7 @@
 <div class="content">
 &emsp;The mission of ACM-W is to engage women in activities and projects that aim to improve the working and learning environments for women in computing by mentoring and rolemodeling, volunteering and teaching others, encouraging other women to get involved in CS, and providing historical information about women and their roles and contributions within the field of computer science.
 <p>&emsp;The Ohio State Chapter of the ACM-W was chartered on May 13, 2003. Our membership is open to all students interested in furthering the mission of the ACM-W, male or female, undergrad or grad, etc.</p>
-<p>&emsp;If you have come to our page but attend another establishment that does not have an ACM-W chapter and are interested in starting your own, you can find more information 
+<p>&emsp;If you have come to our page but attend another establishment that does not have an ACM-W chapter and are interested in starting your own, you can find more information
 <a href="http://www.acm.org/chapters/students/form-acmw" target="_blank">here.</a></p>
 &emsp;Thank you for taking the time to check us out. We would love to have you join us! To receive the latest information about our meetings and events, please see our <a href="/events">Events Page</a> and subscribe to our <a href="https://docs.google.com/forms/d/e/1FAIpQLSdcCmYPK8j_iSbyEe9RLsHOArEd3MYNZztvymtjzRwXie3-4A/viewform">Email List</a>.
 </div>
@@ -61,13 +62,14 @@
 			<i class="fa fa-facebook-square"></i>
 		</a>
 		<a href="http://mailman.cse.ohio-state.edu/mailman/listinfo/acmw" target="_blank">
-			<i class="fa fa-envelope-square"></i>			
+			<i class="fa fa-envelope-square"></i>
 		</a>
 		<a href="https://www.instagram.com/acmwosu/" target="_blank">
-			<i class="fa fa-instagram"></i>			
+			<i class="fa fa-instagram"></i>
 		</a>
 	</div>
 	<p class="signature">Designed and Built for the ACM-W at The Ohio State University by Josh Kuehn</p>
 </footer>
 </body>
+<script type="text/javascript" src="js/layout.js"></script>
 </html>
