--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="css/custom.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:100,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
-	
+
 	<!-- ****** faviconit.com favicons ****** -->
 	<link rel="shortcut icon" href="img/favicons/favicon.ico">
 	<link rel="icon" sizes="16x16 32x32 64x64" href="img/favicons/favicon.ico">
@@ -34,11 +34,12 @@
 	<meta name="msapplication-TileImage" content="img/favicons/favicon-144.png">
 	<meta name="msapplication-config" content="img/favicons/browserconfig.xml">
 	<!-- ****** faviconit.com favicons ****** -->
-	
+
 </head>
 
 <body>
 <header>
+	<h1 id="nav-title">About <i class="fa fa-angle-down" aria-hidden="true"></i></h1>
 	<nav>
 		<ul>
 			<li><a href="/"><i class="fa fa-home"></i> Home</a></li>
@@ -71,13 +72,14 @@
 			<i class="fa fa-facebook-square"></i>
 		</a>
 		<a href="http://mailman.cse.ohio-state.edu/mailman/listinfo/acmw" target="_blank">
-			<i class="fa fa-envelope-square"></i>			
+			<i class="fa fa-envelope-square"></i>
 		</a>
 		<a href="https://www.instagram.com/acmwosu/" target="_blank">
-			<i class="fa fa-instagram"></i>			
+			<i class="fa fa-instagram"></i>
 		</a>
 	</div>
 	<p class="signature">Designed and Built for the ACM-W at The Ohio State University by Josh Kuehn</p>
 </footer>
 </body>
+<script type="text/javascript" src="js/layout.js"></script>
 </html>
