--- a/events.html
+++ b/events.html
@@ -38,6 +38,7 @@
 </head>
 <body>
 	<header>
+	<h1 id="nav-title">About <i class="fa fa-angle-down" aria-hidden="true"></i></h1>
 	<nav>
 		<ul>
 			<li><a href="/"><i class="fa fa-home"></i> Home</a></li>
@@ -64,10 +65,10 @@
 			<i class="fa fa-facebook-square"></i>
 		</a>
 		<a href="http://mailman.cse.ohio-state.edu/mailman/listinfo/acmw" target="_blank">
-			<i class="fa fa-envelope-square"></i>			
+			<i class="fa fa-envelope-square"></i>
 		</a>
 		<a href="https://www.instagram.com/acmwosu/" target="_blank">
-			<i class="fa fa-instagram"></i>			
+			<i class="fa fa-instagram"></i>
 		</a>
 	</div>
 	<p class="signature">Designed and Built for the ACM-W at The Ohio State University by Josh Kuehn</p>
@@ -75,4 +76,5 @@
 </body>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript" src="js/eventScript.js"></script>
+<script type="text/javascript" src="js/layout.js"></script>
 </html>
