--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
 <body>
 <header>
+	<h1 id="nav-title">About <i class="fa fa-angle-down" aria-hidden="true"></i></h1>
 	<nav>
 		<ul>
 			<li><a class="active"><i class="fa fa-home"></i> Home</a></li>
@@ -81,4 +82,5 @@
 	<p class="signature">Designed and Built for the ACM-W at The Ohio State University by Josh Kuehn</p>
 </footer>
 </body>
+<script type="text/javascript" src="js/layout.js"></script>
 </html>
