Fixed page titles

--- a/events.html
+++ b/events.html
@@ -38,7 +38,7 @@
 </head>
 <body>
 	<header>
-	<h1 id="nav-title">About <i class="fa fa-angle-down" aria-hidden="true"></i></h1>
+	<h1 id="nav-title">Events <i class="fa fa-angle-down" aria-hidden="true"></i></h1>
 	<nav>
 		<ul>
 			<li><a href="/"><i class="fa fa-home"></i> Home</a></li>
