--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <body>
 <header>
-	<h1 id="nav-title">About <i class="fa fa-angle-down" aria-hidden="true"></i></h1>
+	<h1 id="nav-title">Home <i class="fa fa-angle-down" aria-hidden="true"></i></h1>
 	<nav>
 		<ul>
 			<li><a class="active"><i class="fa fa-home"></i> Home</a></li>
