--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 
 <body>
 <header>
-	<h1 id="nav-title">About <i class="fa fa-angle-down" aria-hidden="true"></i></h1>
+	<h1 id="nav-title">Contact <i class="fa fa-angle-down" aria-hidden="true"></i></h1>
 	<nav>
 		<ul>
 			<li><a href="/"><i class="fa fa-home"></i> Home</a></li>
