updated contact info

--- a/contact.html
+++ b/contact.html
@@ -51,20 +51,19 @@
 	</div>
 </header>
 <div class="content">
-	<div class="split">
-	If you'd like to host an event/tech talk with us, do not hesitate to contact us!</br>
-		<div class="left">
-		President:</br>
-		Winnie Li</br>
-		<a href="mailto:li.3899@osu.edu"><i class="fa fa-envelope"></i></a>
-		</div>
-		<div class="right">
-		Advisor:</br>
-		Chris Stewart</br>
-		<a href="mailto:stewart.962@osu.edu"><i class="fa fa-envelope"></i></a>
-		</div>
-	</br>Our office is located in Dreese Lab 159.
-	</div>
+	<p>If you'd like to host an event/tech talk with us, don't hestitate to reach
+		out! For general inquiries, you can write to us at <a href="mailto:acmwosu@gmail.com">acmwosu@gmail.com</a>.</p>
+	<p>Our office is located in Dreese Lab 159.</p>
+	<h3 class="header">Executive Board</h3>
+		<ul class="e-board">
+			<li>Co-Presidents: <a href="mailto:campbell.1807@osu.edu">Courtney Campbell</a> and <a href="mailto:engle.165@osu.edu">Emily Engle</a></li>
+			<li>Secretary: <a href="mailto:zhang.6372@osu.edu">Sharon Zhang</a></li>
+			<li>Treasurer: <a href="mailto:good.296@osu.edu">Mary Catherine Good</a></li>
+			<li>Events Co-ordinator: <a href="mailto:chigurupati.5@osu.edu">Sruti Chigurupati</a></li>
+			<li>Outreach Co-ordinators: <a href="mailto:horn.3162@osu.edu">Caityln Horn</a> and <a href="mailto:boni.14@osu.edu">Kirstin Boni</a></li>
+			<li>Recruitment Co-ordinator: <a href="mailto:pirman.5@osu.edu">Stephanie Pirman</a></li>
+			<li>Faculty Advisor: <a href="mailto:stewart.962@osu.edu">Chris Stewart</a></li>
+		</ul>
 </div>
 <footer>
 	<div class="social_icons">
