--- a/contact.html
+++ b/contact.html
@@ -59,9 +59,9 @@
 			<li>Co-Presidents: <a href="mailto:campbell.1807@osu.edu">Courtney Campbell</a> and <a href="mailto:engle.165@osu.edu">Emily Engle</a></li>
 			<li>Secretary: <a href="mailto:zhang.6372@osu.edu">Sharon Zhang</a></li>
 			<li>Treasurer: <a href="mailto:good.296@osu.edu">Mary Catherine Good</a></li>
-			<li>Events Co-ordinator: <a href="mailto:chigurupati.5@osu.edu">Sruti Chigurupati</a></li>
-			<li>Outreach Co-ordinators: <a href="mailto:horn.3162@osu.edu">Caityln Horn</a> and <a href="mailto:boni.14@osu.edu">Kirstin Boni</a></li>
-			<li>Recruitment Co-ordinator: <a href="mailto:pirman.5@osu.edu">Stephanie Pirman</a></li>
+			<li>Events Coordinator: <a href="mailto:chigurupati.5@osu.edu">Sruti Chigurupati</a></li>
+			<li>Outreach Coordinators: <a href="mailto:horn.3162@osu.edu">Caitlyn Horn</a> and <a href="mailto:boni.14@osu.edu">Kirstin Boni</a></li>
+			<li>Media Coordinator: <a href="mailto:pirman.5@osu.edu">Stephanie Pirman</a></li>
 			<li>Faculty Advisor: <a href="mailto:stewart.962@osu.edu">Chris Stewart</a></li>
 		</ul>
 </div>
