Update room number and email address

--- a/events.html
+++ b/events.html
@@ -64,7 +64,7 @@
 		<a href="https://www.facebook.com/groups/345321265556424/" target="_blank">
 			<i class="fa fa-facebook-square"></i>
 		</a>
-		<a href="http://mailman.cse.ohio-state.edu/mailman/listinfo/acmw" target="_blank">
+		<a href="mailto:acmwosu@gmail.com" target="_blank">
 			<i class="fa fa-envelope-square"></i>
 		</a>
 		<a href="https://www.instagram.com/acmwosu/" target="_blank">
