--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		</div>
 		<div class="section_two">
 		<h3 class="header">Meetings</h3>
-		<p class="tagline">Wednesdays at 7pm</br>Dreese Labs 264</br>The Ohio State University</p>
+		<p class="tagline">Wednesdays at 7pm</br>Dreese Labs 357</br>The Ohio State University</p>
 		<h3 class="header">What we've been up to</h3>
 		<p class="tagline">
 		<a href="img/YearInReview2016.pdf"><strong>&#8250;</strong> 2016-2017 Year in Review</a>
@@ -74,7 +74,7 @@
 		<a href="https://www.facebook.com/groups/345321265556424/" target="_blank">
 			<i class="fa fa-facebook-square"></i>
 		</a>
-		<a href="http://mailman.cse.ohio-state.edu/mailman/listinfo/acmw" target="_blank">
+		<a href="mailto:acmwosu@gmail.com" target="_blank">
 			<i class="fa fa-envelope-square"></i>
 		</a>
 		<a href="https://www.instagram.com/acmwosu/" target="_blank">
