Adding exec board picture

--- a/about.html
+++ b/about.html
@@ -49,6 +49,8 @@
 		</ul>
 	</div>
 </header>
+<h3 class="header_2">Executive Board 16-17</h3>
+<img src="img/exec.jpg" width="1000" id="e-board-pic">
 <div class="content">
 &emsp;The mission of ACM-W is to engage women in activities and projects that aim to improve the working and learning environments for women in computing by mentoring and rolemodeling, volunteering and teaching others, encouraging other women to get involved in CS, and providing historical information about women and their roles and contributions within the field of computer science.
 <p>&emsp;The Ohio State Chapter of the ACM-W was chartered on May 13, 2003. Our membership is open to all students interested in furthering the mission of the ACM-W, male or female, undergrad or grad, etc.</p>
