Updating events page with event details

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
 	<p>If you'd like to host an event/tech talk with us, don't hestitate to reach
 		out! For general inquiries, you can write to us at <a href="mailto:acmwosu@gmail.com">acmwosu@gmail.com</a>.</p>
 	<p>Our office is located in Dreese Lab 159.</p>
-	<h3 class="header">Executive Board</h3>
+	<h3 class="header">Executive Board 17-18</h3>
 		<ul class="e-board">
 			<li>Co-Presidents: <a href="mailto:campbell.1807@osu.edu">Courtney Campbell</a> and <a href="mailto:engle.165@osu.edu">Emily Engle</a></li>
 			<li>Secretary: <a href="mailto:zhang.6372@osu.edu">Sharon Zhang</a></li>
