Re-route newsletter signups directly to mailchiml

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<img class="logo" src="img/Logo.png">
 			<div class="title">
 				<p class="name"><b>A</b>ssociation&nbspof</br><b>C</b>omputing</br><b>M</b>achinery</br><b>W</b>omen's&nbspChapter</br></p>
-				<a href="https://docs.google.com/forms/d/e/1FAIpQLSdcCmYPK8j_iSbyEe9RLsHOArEd3MYNZztvymtjzRwXie3-4A/viewform" class="button">Join&nbspthe&nbspmailing&nbsplist!</a>
+				<a href="http://eepurl.com/c73Bbn" class="button">Join&nbspthe&nbspmailing&nbsplist!</a>
 			</div>
 		</div>
 		<div class="section_two">
