--- a/join.html
+++ b/join.html
@@ -70,7 +70,7 @@
 		</br>
 		&emsp;The ACM-W is open to all students who are interested in technology, regardless of gender, major, or university status.</br>
 		<br/>
-		&emsp;To find information about our next meeting, please see the Events Page. Also, to receive the most up-to-date information in your inbox, be sure to <a href="https://docs.google.com/forms/d/e/1FAIpQLSdcCmYPK8j_iSbyEe9RLsHOArEd3MYNZztvymtjzRwXie3-4A/viewform">join our Mailing List</a>.
+		&emsp;To find information about our next meeting, please see the Events Page. Also, to receive the most up-to-date information in your inbox, be sure to <a href="http://eepurl.com/c73Bbn">join our Mailing List</a>.
 </div>
 
 <footer>
